home issue resolve on mobile

--- a/portfolio/src/components/Header/Header.css
+++ b/portfolio/src/components/Header/Header.css
@@ -1,30 +1,17 @@
 header{position: relative; z-index: 999;}
 .navbar{box-shadow: 0px 1px 3px 0px rgba(242,243,245,1);}
 .nav-container{padding: 15px 0px;display: flex;align-items: center;justify-content: space-between;}
-.navbar-brand{text-decoration: none;color: var(--text-color);font-size: calc(16px + (20 - 16) * ((100vw - 320px) / (1920 - 320)));font-weight: 700;}
+.navbar-brand{text-decoration: none;color: var(--text-color);font-size: calc(20px + (22 - 20) * ((100vw - 320px) / (1920 - 320)));font-weight: 700;font-family: "Orbitron", sans-serif;background: linear-gradient(to right, #434B77 0%, #AC3E31 26%, #FBBE5B 50%, #488A99 75%, #1F3F49 100%);-webkit-background-clip: text;-webkit-text-fill-color: transparent;}
 .hamButton{border-radius: 0;border: 0;background-color: transparent;}
 .hamButton.hide{opacity: 0;}
 .hamButton i{color: var(--text-color);font-size: calc(30px + (36 - 30) * ((100vw - 320px) / (1920 - 320)));font-weight: bold;cursor: pointer;}
-.nav-collapse{position: fixed;right: 0;top: 0;width: 100%;max-width: 300px;height: 100%;
-    background: rgba(0, 0, 0, 0.9); 
-    backdrop-filter: blur(10px); 
-    -webkit-backdrop-filter: blur(10px); 
-    border: 1px solid rgba(255, 255, 255, 0.3); 
-    box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2); 
-    padding: 20px 0px;
-    transform: translateX(100%);
-    opacity: 0;
-    z-index: 100;
-    background: rgb(18,18,18);
-    background: linear-gradient(180deg, rgba(18,18,18,1) 0%, rgba(56,56,56,1) 65%, rgba(66,66,66,1) 100%);
-}
+.nav-collapse{position:fixed;right:0;top:0;width:100%;max-width:300px;height:100%;background:rgba(0,0,0,.9);backdrop-filter:blur(10px);-webkit-backdrop-filter:blur(10px);border:1px solid rgba(255,255,255,.3);box-shadow:0 8px 32px rgba(0,0,0,.2);padding:20px 0;transform:translateX(100%);opacity:0;z-index:100;background:#121212;background:linear-gradient(180deg,#121212 0,#383838 65%,#424242 100%)}
 .closeButton{display: block;margin: 0px 10px 0px auto;background-color: transparent;border: 0;cursor: pointer;}
 .closeButton i{color: var(--text-color);font-size: 30px;}
 .navbar-nav{list-style: none; padding-left: 0;}
 .navbar-nav .nav-item{margin: 0px 5px;border-bottom: 1px solid var(--border-color);overflow-y: hidden;}
 .navbar-nav .nav-item:last-child{border: none;}
-.navbar .nav-link{color: var(--text-color);text-decoration: none;display: block;font-size: calc(16px + (18 - 16) * ((100vw - 320px) / (1920 - 320)));padding: 10px 20px;
-}
+.navbar .nav-link{text-decoration: none;display: block;font-size: calc(18px + (20 - 18) * ((100vw - 320px) / (1920 - 320)));padding: 10px 20px;background: linear-gradient(to left, #BCD42A 0%, #479C9C 50%, #BCD42A 100%);-webkit-background-clip: text;-webkit-text-fill-color: transparent;font-weight: 700;}
 
 @media (max-width: 991px) {
     .nav-container{padding: 15px;}
